sbt: run JUnit tests